src/docs/grandMA2/ws_keyboard_shortcuts/en/3.9/index.md
---
originalUrl: 'https://help2.malighting.com/Page/grandMA2/ws_keyboard_shortcuts/en/3.9'
---

<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option value="6">3.3</option>
<option value="14">3.4</option>
<option value="18">3.5</option>
<option value="21">3.6</option>
<option value="23">3.7</option>
<option value="27">3.8</option>
<option selected="selected" value="31">3.9</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="11">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="06974c66-79b2-4787-90dc-cda1f88f3edb">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/grandMA2/ws_icons/en/3.9'; " title="Go to previous page 'Icons'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/grandMA2/ws_keyboard_shortcuts_on_off/en/3.9';" title="Go to next page 'Turn on or turn off the keyboard shortcuts'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

		
			<div class="pull-right">
					<button class="btn btn-mini" style="margin-right: 10px; height: 30px;" onclick="location.href = '/Media/TopicPdf/87120/31'; " title="Open/Save this topic as PDF document for viewing or printing">
						<img src="/Content/images/icons/filetype_pdf.png" style="height: 24px;"> Open topic as PDF
					</button>
				<span class="badge badge-info">Version 3.9</span>
			</div>
		<h1>Keyboard shortcuts</h1>

			<div class="topic-table-of-contents">
				<h2>Table of contents of this topic</h2>
				<div class="topic-toc-toggler topic-toc-toggler-hide"><a href="#" onclick="$('.topic-toc-ul').toggle(); $('.topic-toc-toggler-hide').hide(); $('.topic-toc-toggler-show').show(); return false;">hide</a></div>
				<div class="topic-toc-toggler topic-toc-toggler-show" style="display: none;"><a href="#" onclick="$('.topic-toc-ul').toggle(); $('.topic-toc-toggler-hide').show(); $('.topic-toc-toggler-show').hide(); return false;">show</a></div>
				<ul class="topic-toc-ul">
						<li>
							<a href="#toc_header_anchor_1">Shortcuts for command area keys</a>
						</li>
						<li>
							<a href="#toc_header_anchor_2">Shortcuts for menu keys</a>
						</li>
						<li>
							<a href="#toc_header_anchor_3">Shortcuts for X-keys</a>
						</li>
						<li>
							<a href="#toc_header_anchor_4">Shortcuts for master section keys</a>
						</li>
						<li>
							<a href="#toc_header_anchor_5">Shortcuts for grandMA2 onPC screen buttons</a>
						</li>
						<li>
							<a href="#toc_header_anchor_6">Reset keyboard shortcuts to defaults</a>
						</li>
				</ul>
			</div>

		<div class="important"><strong>Important:</strong><br>
1. Keyboard shortcuts are only available on a grandMA2 onPC.<br>
2. Keyboards that have a different keyboard layout, as opposed to German keyboards, do not support all default keyboard shortcuts.&nbsp;<br>
If this should be the case with your keyboard, adjust the shortcuts affected. To transfer these to other show files and/or stations, use the Import/Export function. For more information on how adjust the shortcuts see <a href="/Topic/a8154ae3-022a-4e2a-8c3a-fb36f95d66bf">export or import keyboard shortcuts</a>.&nbsp;</div>

<p>The go to the keyboard shortcuts press the <span class="hardkey">Setup</span> and under tab <strong>Console </strong>tap <span class="softkey">Edit Keyboard Shortcuts</span>.</p>

<figure class="caption"><img alt="" src="/Media/Image/menu_edit-keyboard-shortcuts_v3-2.png">
<figcaption><em>Edit Keyboard Shortcuts window</em></figcaption>
</figure>

<p>The following tables displays the default grandMA2 onPC keyboard shortcuts.</p>

<a name="toc_header_anchor_1" id="toc_header_anchor_1" class="topic-toc-item"></a><h2>Shortcuts for command area keys</h2>

<table border="1" cellpadding="1" cellspacing="1" style="width:350px">
	<thead>
		<tr>
			<th scope="col">Key</th>
			<th scope="col">Shortcut</th>
		</tr>
	</thead>
	<tbody>
		<tr>
			<td><span class="hardkey">Blind</span></td>
			<td>B</td>
		</tr>
		<tr>
			<td><span class="hardkey">Freeze</span></td>
			<td>Alt + F</td>
		</tr>
		<tr>
			<td><span class="hardkey">Prevw</span></td>
			<td>Ctrl + Alt + P</td>
		</tr>
		<tr>
			<td><span class="hardkey">Assign</span></td>
			<td>Alt + A</td>
		</tr>
		<tr>
			<td><span class="hardkey">Align</span></td>
			<td>Ctrl + A</td>
		</tr>
		<tr>
			<td><span class="hardkey">U1</span></td>
			<td>Alt + F1</td>
		</tr>
		<tr>
			<td><span class="hardkey">U2</span></td>
			<td>Alt + F2</td>
		</tr>
		<tr>
			<td><span class="hardkey">U3</span></td>
			<td>Alt + F3</td>
		</tr>
		<tr>
			<td><span class="hardkey">U4</span></td>
			<td>Alt + F4</td>
		</tr>
		<tr>
			<td><span class="hardkey">Fix</span></td>
			<td>Ctrl + Alt + F</td>
		</tr>
		<tr>
			<td><span class="hardkey">Select</span></td>
			<td>Ctrl + S</td>
		</tr>
		<tr>
			<td><span class="hardkey">Off</span></td>
			<td>O</td>
		</tr>
		<tr>
			<td><span class="hardkey">Temp</span></td>
			<td>Ctrl + Alt + T</td>
		</tr>
		<tr>
			<td><span class="hardkey">Top</span></td>
			<td>Alt + T</td>
		</tr>
		<tr>
			<td><span class="hardkey">On</span></td>
			<td>Ctrl + O</td>
		</tr>
		<tr>
			<td><span class="hardkey">&lt;&lt;&lt;</span></td>
			<td>Alt + &lt;</td>
		</tr>
		<tr>
			<td><span class="hardkey">Learn</span></td>
			<td>Ctrl + L</td>
		</tr>
		<tr>
			<td><span class="hardkey">&gt;&gt;&gt;</span></td>
			<td>Ctrl + Alt + &lt;</td>
		</tr>
		<tr>
			<td>Small <span class="hardkey">Go -</span></td>
			<td>&lt;</td>
		</tr>
		<tr>
			<td>Small <span class="hardkey">Pause</span></td>
			<td>Ctrl + P</td>
		</tr>
		<tr>
			<td>Small <span class="hardkey">Go +</span></td>
			<td>Ctrl + &lt;</td>
		</tr>
		<tr>
			<td><span class="hardkey">View</span></td>
			<td>V</td>
		</tr>
		<tr>
			<td><span class="hardkey">Effect</span></td>
			<td>Alt + E</td>
		</tr>
		<tr>
			<td><span class="hardkey">Goto</span></td>
			<td>Alt + G</td>
		</tr>
		<tr>
			<td><span class="hardkey">Page</span></td>
			<td>Alt + P</td>
		</tr>
		<tr>
			<td><span class="hardkey">Macro</span></td>
			<td>M</td>
		</tr>
		<tr>
			<td><span class="hardkey">Preset</span></td>
			<td>P</td>
		</tr>
		<tr>
			<td><span class="hardkey">Sequ</span></td>
			<td>Alt + S</td>
		</tr>
		<tr>
			<td><span class="hardkey">Cue</span></td>
			<td>Alt + C</td>
		</tr>
		<tr>
			<td><span class="hardkey">Exec</span></td>
			<td>X</td>
		</tr>
		<tr>
			<td><span class="hardkey">Channel</span></td>
			<td>C</td>
		</tr>
		<tr>
			<td><span class="hardkey">Fixture</span></td>
			<td>F</td>
		</tr>
		<tr>
			<td><span class="hardkey">Group</span></td>
			<td>G</td>
		</tr>
		<tr>
			<td><span class="hardkey">Delete</span></td>
			<td>Ctrl + D</td>
		</tr>
		<tr>
			<td><span class="hardkey">Move</span></td>
			<td>Ctrl + M</td>
		</tr>
		<tr>
			<td><span class="hardkey">Copy</span></td>
			<td>Ctrl + C</td>
		</tr>
		<tr>
			<td><span class="hardkey">Full</span></td>
			<td>Ctrl + F</td>
		</tr>
		<tr>
			<td><span class="hardkey">Highlt</span></td>
			<td>H</td>
		</tr>
		<tr>
			<td><span class="hardkey">Solo</span></td>
			<td>Ctrl + Alt + S</td>
		</tr>
		<tr>
			<td><span class="hardkey">Backg</span></td>
			<td>Alt + B</td>
		</tr>
		<tr>
			<td><span class="hardkey">User1</span></td>
			<td>Ctrl + U</td>
		</tr>
		<tr>
			<td><span class="hardkey">User2</span></td>
			<td>Alt + U</td>
		</tr>
		<tr>
			<td><span class="hardkey">Time</span></td>
			<td>Ctrl + T</td>
		</tr>
		<tr>
			<td><span class="hardkey">Esc</span></td>
			<td>Esc</td>
		</tr>
		<tr>
			<td><span class="hardkey">Edit</span></td>
			<td>E</td>
		</tr>
		<tr>
			<td><span class="hardkey">Oops</span></td>
			<td>Backspace</td>
		</tr>
		<tr>
			<td><span class="hardkey">Update</span></td>
			<td>U</td>
		</tr>
		<tr>
			<td><span class="hardkey">Clear</span></td>
			<td>Delete</td>
		</tr>
		<tr>
			<td><span class="hardkey">List</span></td>
			<td>L</td>
		</tr>
		<tr>
			<td><span class="hardkey">Store</span></td>
			<td>S</td>
		</tr>
		<tr>
			<td><span class="hardkey"><img alt="ma" src="/Media/Mlg/ma_1.png"></span></td>
			<td>Shift</td>
		</tr>
		<tr>
			<td><span class="hardkey">Please</span></td>
			<td>Enter</td>
		</tr>
		<tr>
			<td><span class="hardkey">&nbsp;. </span></td>
			<td>.</td>
		</tr>
		<tr>
			<td><span class="hardkey">If</span></td>
			<td>I</td>
		</tr>
		<tr>
			<td><span class="hardkey">At</span></td>
			<td>A</td>
		</tr>
		<tr>
			<td><span class="hardkey">Thru</span></td>
			<td>/ (number pad)</td>
		</tr>
		<tr>
			<td><span class="hardkey">+</span></td>
			<td>+</td>
		</tr>
		<tr>
			<td><span class="hardkey">-</span></td>
			<td>-</td>
		</tr>
		<tr>
			<td><span class="hardkey">0</span></td>
			<td>0</td>
		</tr>
		<tr>
			<td><span class="hardkey">1</span></td>
			<td>1</td>
		</tr>
		<tr>
			<td><span class="hardkey">2</span></td>
			<td>2</td>
		</tr>
		<tr>
			<td><span class="hardkey">3</span></td>
			<td>3</td>
		</tr>
		<tr>
			<td><span class="hardkey">4</span></td>
			<td>4</td>
		</tr>
		<tr>
			<td><span class="hardkey">5</span></td>
			<td>5</td>
		</tr>
		<tr>
			<td><span class="hardkey">6</span></td>
			<td>6</td>
		</tr>
		<tr>
			<td><span class="hardkey">7</span></td>
			<td>7</td>
		</tr>
		<tr>
			<td><span class="hardkey">8</span></td>
			<td>8</td>
		</tr>
		<tr>
			<td><span class="hardkey">9</span></td>
			<td>9</td>
		</tr>
		<tr>
			<td><span class="hardkey">Up</span></td>
			<td>Arrow up</td>
		</tr>
		<tr>
			<td><span class="hardkey">Down</span></td>
			<td>Arrow down</td>
		</tr>
		<tr>
			<td><span class="hardkey">Prev</span></td>
			<td>Arrow left</td>
		</tr>
		<tr>
			<td style="width:50%"><span class="hardkey">Next</span></td>
			<td>Arrow right</td>
		</tr>
		<tr>
			<td><span class="hardkey">Set</span></td>
			<td style="width:50%">End</td>
		</tr>
		<tr>
			<td><span class="hardkey"><img alt="encoder" src="/Media/Mlg/encoder_1.png"></span></td>
			<td style="width:50%">Ctrl + Alt + E</td>
		</tr>
	</tbody>
</table>

<a name="toc_header_anchor_2" id="toc_header_anchor_2" class="topic-toc-item"></a><h2>Shortcuts for menu keys</h2>

<table border="1" cellpadding="1" cellspacing="1" style="width:350px">
	<thead>
		<tr>
			<th scope="col">Key</th>
			<th scope="col">Shortcut</th>
		</tr>
	</thead>
	<tbody>
		<tr>
			<td style="width:50%"><span class="hardkey">Tools</span></td>
			<td>Ctrl + F12</td>
		</tr>
		<tr>
			<td><span class="hardkey">Setup</span></td>
			<td>F12</td>
		</tr>
		<tr>
			<td><span class="hardkey">Backup</span></td>
			<td style="width:50%">Ctrl + Alt + B</td>
		</tr>
		<tr>
			<td><span class="hardkey">Help</span></td>
			<td>Ctrl + Alt + H</td>
		</tr>
	</tbody>
</table>

<a name="toc_header_anchor_3" id="toc_header_anchor_3" class="topic-toc-item"></a><h2>Shortcuts for X-keys</h2>

<table border="1" cellpadding="1" cellspacing="1" style="width:350px">
	<thead>
		<tr>
			<th scope="col" style="width:50%">Key</th>
			<th scope="col" style="width:50%">Shortcut</th>
		</tr>
	</thead>
	<tbody>
		<tr>
			<td><span class="hardkey">X1</span></td>
			<td>F1</td>
		</tr>
		<tr>
			<td><span class="hardkey">X2</span></td>
			<td>F2</td>
		</tr>
		<tr>
			<td><span class="hardkey">X3</span></td>
			<td>F3</td>
		</tr>
		<tr>
			<td><span class="hardkey">X4</span></td>
			<td>F4</td>
		</tr>
		<tr>
			<td><span class="hardkey">X5</span></td>
			<td>F5</td>
		</tr>
		<tr>
			<td><span class="hardkey">X6</span></td>
			<td>F6</td>
		</tr>
		<tr>
			<td><span class="hardkey">X7</span></td>
			<td>F7</td>
		</tr>
		<tr>
			<td><span class="hardkey">X8</span></td>
			<td>F8</td>
		</tr>
		<tr>
			<td><span class="hardkey">X9</span></td>
			<td>F9</td>
		</tr>
		<tr>
			<td><span class="hardkey">X10</span></td>
			<td>F10</td>
		</tr>
		<tr>
			<td><span class="hardkey">X11</span></td>
			<td>Ctrl + F1</td>
		</tr>
		<tr>
			<td><span class="hardkey">X12</span></td>
			<td>Ctrl + F2</td>
		</tr>
		<tr>
			<td><span class="hardkey">X13</span></td>
			<td>Ctrl + F3</td>
		</tr>
		<tr>
			<td><span class="hardkey">X14</span></td>
			<td>Ctrl + F4</td>
		</tr>
		<tr>
			<td><span class="hardkey">X15</span></td>
			<td>Ctrl + F5</td>
		</tr>
		<tr>
			<td><span class="hardkey">X16</span></td>
			<td>Ctrl + F6</td>
		</tr>
		<tr>
			<td><span class="hardkey">X17</span></td>
			<td>Ctrl + F7</td>
		</tr>
		<tr>
			<td><span class="hardkey">X18</span></td>
			<td>Ctrl + F8</td>
		</tr>
		<tr>
			<td><span class="hardkey">X19</span></td>
			<td>Ctrl + F9</td>
		</tr>
		<tr>
			<td><span class="hardkey">X20</span></td>
			<td>Ctrl + F10</td>
		</tr>
	</tbody>
</table>

<a name="toc_header_anchor_4" id="toc_header_anchor_4" class="topic-toc-item"></a><h2>Shortcuts for master section keys</h2>

<table border="1" cellpadding="1" cellspacing="1" style="width:350px">
	<thead>
		<tr>
			<th scope="col" style="width:50%">Result</th>
			<th scope="col" style="width:50%">Shortcut</th>
		</tr>
	</thead>
	<tbody>
		<tr>
			<td><span class="hardkey">Ch Pg+</span></td>
			<td>Alt + PgUp</td>
		</tr>
		<tr>
			<td><span class="hardkey">Ch Pg-</span></td>
			<td>Alt + PgDown</td>
		</tr>
		<tr>
			<td><span class="hardkey">Fd Pg+</span></td>
			<td>PgUp</td>
		</tr>
		<tr>
			<td><span class="hardkey">Fd Pg-</span></td>
			<td>PgDown</td>
		</tr>
		<tr>
			<td><span class="hardkey">Bn Pg+</span></td>
			<td>Ctrl + PgUp</td>
		</tr>
		<tr>
			<td><span class="hardkey">Bn Pg-</span></td>
			<td>Ctrl + PgDown</td>
		</tr>
		<tr>
			<td>Large <span class="hardkey">Pause</span></td>
			<td>Alt + Space</td>
		</tr>
		<tr>
			<td>Large <span class="hardkey">Go-</span></td>
			<td>Ctrl + Space</td>
		</tr>
		<tr>
			<td>Large <span class="hardkey">Go</span></td>
			<td>Space</td>
		</tr>
	</tbody>
</table>

<a name="toc_header_anchor_5" id="toc_header_anchor_5" class="topic-toc-item"></a><h2>Shortcuts for grandMA2 onPC screen buttons</h2>

<table border="1" cellpadding="1" cellspacing="1" style="width:350px">
	<thead>
		<tr>
			<th scope="col" style="width:50%">Result</th>
			<th scope="col" style="width:50%">Shortcut</th>
		</tr>
	</thead>
	<tbody>
		<tr>
			<td><span class="softkey">Extern 1</span></td>
			<td>Ctrl + Alt + F5</td>
		</tr>
		<tr>
			<td><span class="softkey">Extern 2</span></td>
			<td>Ctrl + Alt + F6</td>
		</tr>
		<tr>
			<td><span class="softkey">Executor 1 - 15, 101 - 115</span></td>
			<td>Ctrl + Alt + F7</td>
		</tr>
		<tr>
			<td><span class="softkey">Executor 16 - 30, 116 - 130</span></td>
			<td>Ctrl + Alt + F8</td>
		</tr>
		<tr>
			<td><span class="softkey">Screen 2</span></td>
			<td>Ctrl + Alt + F2</td>
		</tr>
		<tr>
			<td><span class="softkey">Screen 3</span></td>
			<td>Ctrl + Alt + F3</td>
		</tr>
		<tr>
			<td><span class="softkey">Screen 4</span></td>
			<td>Ctrl + Alt + F4</td>
		</tr>
	</tbody>
</table>

<a name="toc_header_anchor_6" id="toc_header_anchor_6" class="topic-toc-item"></a><h2>Reset keyboard shortcuts to defaults</h2>

<p>To reset the keyboard shortcuts to their defaults:</p>

<ol>
	<li>Click <span class="hardkey">Setup</span> and then under tab <strong>console </strong>click <span class="softkey">Edit Keyboard Shortcuts</span>.<br>
	The Edit Keyboard Shortcuts window opens.</li>
	<li>Click <span class="softkey">Reset to Defaults</span>.</li>
</ol>

<p>The keyboard shortcuts are reset to their defaults.</p>

<p>&nbsp;</p>


				<br>
<div class="topic-navigation">
	<br>
	<hr>
	<h4>Sub topics</h4>
	<ul>
				<li><a href="/Page/grandMA2/ws_keyboard_shortcuts_on_off/en/3.9">Turn on or turn off the keyboard shortcuts</a></li>
				<li><a href="/Page/grandMA2/ws_keyboard_shortcuts_edit/en/3.9">Edit keyboard shortcuts</a></li>
				<li><a href="/Page/grandMA2/ws_keyboard_shortcuts_add_delete/en/3.9">Add or delete keyboard shortcuts</a></li>
				<li><a href="/Page/grandMA2/ws_keyboard_shortcuts_export_import/en/3.9">Export or import keyboard shortcuts</a></li>
	</ul>

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option value="6">3.3</option>
<option value="14">3.4</option>
<option value="18">3.5</option>
<option value="21">3.6</option>
<option value="23">3.7</option>
<option value="27">3.8</option>
<option selected="selected" value="31">3.9</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="11">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="06974c66-79b2-4787-90dc-cda1f88f3edb">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/grandMA2/ws_icons/en/3.9'; " title="Go to previous page 'Icons'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/grandMA2/ws_keyboard_shortcuts_on_off/en/3.9';" title="Go to next page 'Turn on or turn off the keyboard shortcuts'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
	<div class="clear-fix"></div>
	<div class="pull-right">
	
			<button class="btn btn-mini" onclick="location.href='/Media/TopicPdf/87120/31';" title="Open/Save this topic as PDF document for viewing or printing">
				<img src="/Content/images/icons/filetype_pdf.png"> Open topic as PDF
			</button>
	</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

	
